# cwdj_project

./: .env  README.md  pyproject.toml
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/clients/: client_detail.html  client_list.html
config/: settings.py  urls.py
mailing/: cron.py  forms.py  models.py  urls.py  utils.py  views.py
mailing/migrations/: 0001_initial.py  0002_log_rename_mailingmessage_message_and_more.py  0003_alter_mailing_options_alter_message_options_and_more.py  0004_mailing_next_send_date.py  0005_alter_mailing_next_send_date.py
mailing/templates/mailing/: mailing_list.html
main/: urls.py  views.py
main/templates/main/: base.html  index.html
main/templates/main/includes/: inc_main_card.html  inc_main_menu.html
main/templatetags/: filters.py
templates/: base.html
templates/includes/: inc_main_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csuser.py
users/migrations/: 0001_initial.py  0002_user_email_verify_token_alter_user_is_active.py
users/templates/users/: login.html  register.html  user_form.html
vlog/: models.py  views.py
vlog/migrations/: 0001_initial.py  0002_alter_vlogpost_owner.py
vlog/templates/vlog/: vlogpost_confirm_delete.html  vlogpost_list.html
