[tool.poetry]
name = "cwdj-project"
version = "0.1.0"
description = ""
authors = ["saysuu <skysaika@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
ipython = "^8.22.2"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
